Добавил различные профили для приложения Добавил документацию и часто используемые функции